2003-01-10  Christopher Faylor  <cgf@redhat.com>

	* include/winsock2.h: Remove gethostname from INSIDE_CYGWIN protection.

2003-01-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/dxguid.c: Don't #include <objbase.h>.
	* include/unknwn.h: Partially revert change of 2002-12-26.
	Don't include <ole2.h>.

2003-01-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/dinput.c: Don't #include <objbase.h>.

2003-01-08  Bart Oldeman  <bartoldeman@users.sourceforge.net>

	* include/windows.h (ole2.h):Do #include for
	__WATCOMC__.

2003-01-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (SPI_SETWHEELSCROLLLINES) Add define.
	* include/zmouse.h (WHEEL_DELTA): Guard against prior
	definition.
	(WHEEL_PAGESCROLL): Likewise.
	(SPI_SETWHEELSCROLLLINES): Define, if not already done.

2003-01-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (SPI_GETWHEELSCROLLLINES) Add define.
	(WHEEL_PAGESCROLL): Add define.

2003-01-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (tagNMTOOLBAR[AW]): Replace obsolete struct
	names tagTBNOTIFY[AW] and typedefs. Add defines for backward
	compatability. Add RECT field. Add UNICODE mappings for new
	names.
	(tagNMREBARCHEVRON): Add struct and typedefs for
	_WIN32_IE >= 0x0500.

2003-01-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (TOOLINFO[AW]): Update structures.
	(LVHITTESTINFO): Likewise.

	* include/wingdi.h (GRADIENT_TRIANGLE): Add structure.
	(GRADIENT_RECT): Likewise.

2003-01-03  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winerror.h (ERROR_OPLOCK_NOT_GRANTED,
	ERROR_INVALID_OPLOCK_PROTOCOL, ERROR_SOURCE_ELEMENT_EMPTY,
	ERROR_DESTINATION_ELEMENT_FULL, ERROR_ILLEGAL_ELEMENT_ADDRESS,
	ERROR_MAGAZINE_NOT_PRESENT, ERROR_DEVICE_REINITIALIZATION_NEEDED,
	ERROR_DEVICE_REQUIRES_CLEANING, ERROR_DEVICE_DOOR_OPEN,
	ERROR_DEVICE_NOT_CONNECTED, ERROR_NOT_FOUND, ERROR_NO_MATCH,
	ERROR_SET_NOT_FOUND, ERROR_NO_TRACKING_SERVICE,