@@ -269,6 +269,8 @@ extern "C" {
 #if _WIN32_IE >= 0x0300
 #define HDN_ENDDRAG	(HDN_FIRST-11)
 #define HDN_BEGINDRAG	(HDN_FIRST-10)
+#define HDN_GETDISPINFOA (HDN_FIRST-9)
+#define HDN_GETDISPINFOW (HDN_FIRST-29)
 #endif
 #define IPM_CLEARADDRESS	(WM_USER+100)
 #define IPM_SETADDRESS	(WM_USER+101)
@@ -1553,6 +1555,24 @@ typedef struct _NMHEADERW {
 #define LPNMHEADER LPNMHEADERA
 #endif
 /* End FIXME. */
+typedef struct tagNMHDDISPINFOA {
+    NMHDR   hdr;
+    int     iItem;
+    UINT    mask;
+    LPSTR   pszText;
+    int     cchTextMax;
+    int     iImage;
+    LPARAM  lParam;
+} NMHDDISPINFOA, *LPNMHDDISPINFOA;
+typedef struct tagNMHDDISPINFOW {
+    NMHDR   hdr;
+    int     iItem;
+    UINT    mask;
+    LPWSTR  pszText;
+    int     cchTextMax;
+    int     iImage;
+    LPARAM  lParam;
+} NMHDDISPINFOW, *LPNMHDDISPINFOW;
 typedef struct tagNMCUSTOMDRAWINFO {
     NMHDR    hdr;
     DWORD    dwDrawStage;
@@ -2490,6 +2510,7 @@ typedef TV_INSERTSTRUCTW TV_INSERTSTRUCT,*LPTV_INSERTSTRUCT;
 typedef TVINSERTSTRUCTW TVINSERTSTRUCT,*LPTVINSERTSTRUCT;
 typedef NM_TREEVIEWW NM_TREEVIEW,*LPNM_TREEVIEW;
 typedef NMTREEVIEWW NMTREEVIEW,*LPNMTREEVIEW;
+typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define ACM_OPEN ACM_OPENW
 #define COMBOBOXEXITEM	COMBOBOXEXITEMW
 #define PCOMBOBOXEXITEM	PCOMBOBOXEXITEMW
@@ -2525,6 +2546,9 @@ typedef NMTREEVIEWW NMTREEVIEW,*LPNMTREEVIEW;
 #define HDN_BEGINTRACK	HDN_BEGINTRACKW
 #define HDN_ENDTRACK	HDN_ENDTRACKW
 #define HDN_TRACK	HDN_TRACKW
+#if (_WIN32_IE >= 0x0300)
+#define HDN_GETDISPINFO HDN_GETDISPINFOW
+#endif
 #define HD_NOTIFY HD_NOTIFYW
 #define TOOLBARCLASSNAME TOOLBARCLASSNAMEW
 #define TBSAVEPARAMS TBSAVEPARAMSW
@@ -2658,6 +2682,7 @@ typedef TV_INSERTSTRUCTA TV_INSERTSTRUCT,*LPTV_INSERTSTRUCT;
 typedef TVINSERTSTRUCTA TVINSERTSTRUCT,*LPTVINSERTSTRUCT;
 typedef NM_TREEVIEWA NM_TREEVIEW,*LPNM_TREEVIEW;
 typedef NMTREEVIEWA NMTREEVIEW,*LPNMTREEVIEW;
+typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define ACM_OPEN ACM_OPENA
 #define COMBOBOXEXITEM	COMBOBOXEXITEMA
 #define PCOMBOBOXEXITEM	PCOMBOBOXEXITEMA
@@ -2692,6 +2717,9 @@ typedef NMTREEVIEWA NMTREEVIEW,*LPNMTREEVIEW;
 #define HDN_BEGINTRACK	HDN_BEGINTRACKA
 #define HDN_ENDTRACK	HDN_ENDTRACKA
 #define HDN_TRACK	HDN_TRACKA
+#if (_WIN32_IE >= 0x0300)
+#define HDN_GETDISPINFO HDN_GETDISPINFOA
+#endif
 #define HD_NOTIFY HD_NOTIFYA
 #define TBSAVEPARAMS TBSAVEPARAMSA
 #define TB_GETBUTTONTEXT TB_GETBUTTONTEXTA
